--- a/blogpost.html
+++ b/blogpost.html
@@ -5,11 +5,18 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>El titulo del post</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/estilos.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/estilos.css'/>
     <script src='main.js'></script>
 </head>
 <body>
-    <h1> Aqui vamos a hacer un blog post</h1>
-    <p>Y Este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        <div id ="post">
+            <h1> Aqui vamos a hacer un blog post</h1>
+            <p>Y Este es el parrafo de inicio
+                donde vamos a aporbar las ramas</p>
+        </div>
+    </div>
 </body>
 </html>
