--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Cabecera + NUEVO CONTENIDO
         <div id ="post">
             <h1> Aqui vamos a hacer un blog post</h1>
             <p>Y Este es el parrafo de inicio
